--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,13 +12,13 @@
   "bin": {
     "taskade-mcp-server": "bin/cli.mjs"
   },
-"scripts": {
-  "fetch:openapi": "curl -o taskade-public.yaml https://www.taskade.com/api/documentation/yaml",
-  "generate:taskade-mcp-tools": "tsx scripts/gen-taskade-mcp-tools.ts",
-  "build:cli": "tsx scripts/build-cli.ts",
-  "build": "run-s generate:taskade-mcp-tools build:cli && yarn --cwd=../../ lint:fix",
-  "start:server": "tsx src/http.ts --watch",
-  "start": "tsx src/http.ts"
+  "scripts": {
+    "fetch:openapi": "curl -o taskade-public.yaml https://www.taskade.com/api/documentation/yaml",
+    "generate:taskade-mcp-tools": "tsx scripts/gen-taskade-mcp-tools.ts",
+    "build:cli": "tsx scripts/build-cli.ts",
+    "build": "run-s generate:taskade-mcp-tools build:cli && yarn --cwd=../../ lint:fix",
+    "start:dev": "tsx src/http.ts --watch",
+    "start": "node dist/http.js"
   },
   "devDependencies": {
     "@taskade/mcp-openapi-codegen": "*"
