--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
-  # Install dependencies
+  # Install dependencies with fallback for peer conflict resolution
   - name: 'node'
     entrypoint: 'npm'
-    args: ['install']
+    args: ['install', '--legacy-peer-deps']
     dir: 'packages/server'
 
   # Build the app
@@ -53,9 +53,5 @@ steps:
 
 images:
   - 'us-south1-docker.pkg.dev/taskade-mcp-github/cloud-run-source-deploy/taskade-mcp'
-
-# ✅ Add logging option to satisfy user-managed service account restrictions
-options:
-  logging: CLOUD_LOGGING_ONLY
 
 timeout: '900s'
