--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,7 +21,10 @@
     "start": "node dist/http.js"
   },
   "devDependencies": {
-    "@taskade/mcp-openapi-codegen": "*"
+    "@taskade/mcp-openapi-codegen": "*",
+    "npm-run-all": "^4.1.5",               // ✅ Needed for `run-s`
+    "yarn": "^1.22.19",                     // ✅ Ensures yarn is available during build
+    "tsx": "^3.12.7"                        // ✅ Add if not already installed globally
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.0",
