--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "emitDeclarationOnly": true,
     "composite": true,
     "lib": ["ESNext", "DOM"],
     "jsx": "react",
@@ -22,7 +21,7 @@
   ],
   "exclude": [
     "node_modules",
-    "./dist/**/*",
-    "./lib/**/*"
+    "./lib/**/*",
+    "./dist/**/*"
   ]
 }
