--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -10,9 +10,7 @@
     "resolveJsonModule": true,
     "target": "ES2021",
     "skipLibCheck": true,
-    "types": [
-      "node"
-    ],
+    "types": ["node"],
     "moduleResolution": "bundler"
   },
   "include": [
@@ -20,8 +18,6 @@
     "src/**/*.tsx"
   ],
   "exclude": [
-    "node_modules",
-    "./lib/**/*",
-    "./dist/**/*"
+    "node_modules"
   ]
 }
