--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -11,13 +11,9 @@
     "target": "ES2021",
     "skipLibCheck": true,
     "types": ["node"],
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "declaration": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules"]
 }
