--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "fetch:openapi": "curl -o taskade-public.yaml https://www.taskade.com/api/documentation/yaml",
     "generate:taskade-mcp-tools": "tsx scripts/gen-taskade-mcp-tools.ts",
-    "build": "tsc -b",
+    "build": "tsc -p tsconfig.json",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js"
   },
@@ -23,8 +23,8 @@
     "@taskade/mcp-openapi-codegen": "*",
     "npm-run-all": "^4.1.5",
     "tsx": "^4.6.3",
-    "yarn": "^1.22.19",
-    "typescript": "^5.0.0"
+    "typescript": "^5.6.2",
+    "yarn": "^1.22.19"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.0",
