--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,24 +1,27 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "composite": true,
-    "lib": ["ESNext", "DOM"],
-    "jsx": "react",
+    "composite": false,
+    "target": "ES2021",
+    "module": "commonjs",
+    "moduleResolution": "node",
     "outDir": "./dist",
     "rootDir": "./src",
-    "downlevelIteration": true,
-    "resolveJsonModule": true,
-    "target": "ES2021",
+    "strict": true,
     "skipLibCheck": true,
-    "types": ["node"],
-    "moduleResolution": "bundler",
-    "declaration": true,
-    "module": "commonjs",
     "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "downlevelIteration": true,
+
     "sourceMap": true,
+
+    // 🔒 Force JS emission even if the root tsconfig tries to suppress it
     "noEmit": false,
-    "emitDeclarationOnly": false
+    "emitDeclarationOnly": false,
+
+    // You can turn this back on later if you need .d.ts files
+    "declaration": false
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/index.ts", "src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
