--- a/package.json
+++ b/package.json
@@ -1,38 +1,35 @@
 {
-  "name": "@taskade/mcp",
+  "name": "@taskade/mcp-server",
   "version": "0.0.1",
   "author": "Prev Wong",
-  "license": "UNLICENSED",
-  "type": "module",
+  "license": "MIT",
+  "type": "commonjs",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/taskade/mcp/"
+  },
+  "main": "dist/index.js",
+  "bin": {
+    "taskade-mcp-server": "dist/index.js"
+  },
   "scripts": {
-    "build": "lerna run build",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint --fix . --ext .js,.jsx,.ts,.tsx",
-    "changeset:version": "changeset version",
-    "changeset:publish": "changeset publish",
-    "publish": "run-s build lint changeset:publish"
+    "fetch:openapi": "curl -o taskade-public.yaml https://www.taskade.com/api/documentation/yaml",
+    "generate:taskade-mcp-tools": "tsx scripts/gen-taskade-mcp-tools.ts",
+    "build": "tsc -p tsconfig.json",
+    "dev": "tsx src/index.ts",
+    "start": "node dist/index.js"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.29.4",
-    "@types/node": "^22.15.21",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "esbuild": "^0.25.4",
-    "eslint": "8.56.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "lerna": "^8.2.2",
+    "@taskade/mcp-openapi-codegen": "*",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.5.3",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "tsx": "^4.6.3",
+    "typescript": "^5.6.2",
+    "yarn": "^1.22.19"
   },
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ]
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.12.0",
+    "mcp-proxy": "^3.2.0",
+    "node-fetch": "^3.3.2",
+    "zod": "^3.25.28"
+  }
 }
