--- a/package.json
+++ b/package.json
@@ -1,35 +1,16 @@
 {
-  "name": "@taskade/mcp-server",
-  "version": "0.0.1",
-  "author": "Prev Wong",
+  "name": "taskade-mcp-monorepo",
+  "private": true,
   "license": "MIT",
-  "type": "commonjs",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/taskade/mcp/"
-  },
-  "main": "dist/index.js",
-  "bin": {
-    "taskade-mcp-server": "dist/index.js"
-  },
+  "packageManager": "yarn@1.22.19",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "fetch:openapi": "curl -o taskade-public.yaml https://www.taskade.com/api/documentation/yaml",
-    "generate:taskade-mcp-tools": "tsx scripts/gen-taskade-mcp-tools.ts",
-    "build": "tsc -p tsconfig.json",
-    "dev": "tsx src/index.ts",
-    "start": "node dist/index.js"
-  },
-  "devDependencies": {
-    "@taskade/mcp-openapi-codegen": "*",
-    "npm-run-all": "^4.1.5",
-    "tsx": "^4.6.3",
-    "typescript": "^5.6.2",
-    "yarn": "^1.22.19"
-  },
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.12.0",
-    "mcp-proxy": "^3.2.0",
-    "node-fetch": "^3.3.2",
-    "zod": "^3.25.28"
+    "build": "yarn workspace @taskade/mcp-server build",
+    "start": "yarn workspace @taskade/mcp-server start",
+    "dev": "yarn workspace @taskade/mcp-server dev",
+    "generate:taskade-mcp-tools": "yarn workspace @taskade/mcp-server generate:taskade-mcp-tools",
+    "fetch:openapi": "yarn workspace @taskade/mcp-server fetch:openapi"
   }
 }
