--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,7 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "composite": false,
     "target": "ES2021",
     "module": "commonjs",
     "moduleResolution": "node",
@@ -12,16 +10,12 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "downlevelIteration": true,
-
     "sourceMap": true,
 
-    // 🔒 Force JS emission even if the root tsconfig tries to suppress it
     "noEmit": false,
     "emitDeclarationOnly": false,
-
-    // You can turn this back on later if you need .d.ts files
     "declaration": false
   },
-  "include": ["src/index.ts", "src/**/*.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
