--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,35 +1,29 @@
 {
   "name": "@taskade/mcp-server",
-  "version": "0.0.1",
-  "author": "Prev Wong",
-  "license": "MIT",
-  "type": "commonjs",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/taskade/mcp/"
-  },
-  "main": "dist/index.js",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "main": "src/http.ts",
   "bin": {
-    "taskade-mcp-server": "dist/index.js"
+    "taskade-mcp-server": "bin/cli.mjs"
   },
   "scripts": {
-    "fetch:openapi": "curl -o taskade-public.yaml https://www.taskade.com/api/documentation/yaml",
+    "dev": "tsx src/http.ts --watch",
+    "start": "tsx src/http.ts",
+    "build": "run-s generate:taskade-mcp-tools build:cli",
+    "build:cli": "tsx scripts/build-cli.ts",
     "generate:taskade-mcp-tools": "tsx scripts/gen-taskade-mcp-tools.ts",
-    "build": "tsc -p tsconfig.json",
-    "dev": "tsx src/index.ts",
-    "start": "node dist/index.js"
-  },
-  "devDependencies": {
-    "@taskade/mcp-openapi-codegen": "*",
-    "npm-run-all": "^4.1.5",
-    "tsx": "^4.6.3",
-    "typescript": "^5.6.2",
-    "yarn": "^1.22.19"
+    "lint": "eslint . --ext .ts",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.12.0",
-    "mcp-proxy": "^3.2.0",
-    "node-fetch": "^3.3.2",
-    "zod": "^3.25.28"
+    "@readme/openapi-parser": "^2.0.0",
+    "@taskade/mcp-openapi-codegen": "*"
+  },
+  "devDependencies": {
+    "tsx": "^4.0.0",
+    "typescript": "^5.0.0",
+    "eslint": "^9.0.0",
+    "esbuild": "^0.20.0"
   }
 }
